Adds arrows to About Page in order to  navigate pages. Scss adjusted to make About Page responsive.

--- a/src/App.scss
+++ b/src/App.scss
@@ -47,8 +47,19 @@ html {
   }
 }
 
+.back-arrow {
+  margin: auto 0 auto 1.5em;
+  color: #fff;
+}
+
+.forward-arrow {
+  margin: auto 1.5em auto 0;
+  color: #fff;
+}
+
 .profile-content {
   width: 100%;
+  margin: 10%;
   color: #fff;
   text-shadow: 1px 1px 0 #0b8be7 inset;
   text-align: center;
@@ -63,7 +74,6 @@ html {
   transform: translateY(25%);
 
   .profile-image {
-    border-radius: 50%;
     animation: imageFadeIn ease-in 1s;
     opacity: 1;
     // background: white;
@@ -79,6 +89,7 @@ html {
   }
 
   .profile-description {
+    display: contents;
     justify-content: center;
     align-self: center;
     width: 700px;
