--- a/src/Components/Portfolio/PortfolioWindow.scss
+++ b/src/Components/Portfolio/PortfolioWindow.scss
@@ -25,6 +25,52 @@ header {
   will-change: transform;
 }
 
+.overlay {
+  transition: 0.5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  right: 0;
+  bottom: 0%;
+  // transform: translate(-50%, -50%);
+  // -ms-transform: translate(-50%, -50%);
+  text-align: center;
+  background-color: #2f2f2f;
+}
+
+.content {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: 0.5s ease;
+  backface-visibility: hidden;
+}
+
+.content:hover .image {
+  opacity: 0.3;
+}
+
+.content:hover .overlay {
+  opacity: 0.6;
+}
+
+.tech-pills-container {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  margin: auto;
+}
+
+.tech-pill {
+  background-color: #f7f7f7;
+  border: solid 5px;
+  border-color: aqua;
+  padding: 5px;
+  margin: 10px;
+}
+
 .titlebar {
   background: -webkit-gradient(
     to left,
