--- a/src/Components/Portfolio/PortfolioWindow.scss
+++ b/src/Components/Portfolio/PortfolioWindow.scss
@@ -33,6 +33,7 @@ header {
   left: 0%;
   right: 0;
   bottom: 0%;
+  height: 24vh;
   // transform: translate(-50%, -50%);
   // -ms-transform: translate(-50%, -50%);
   text-align: center;
@@ -43,12 +44,13 @@ header {
   opacity: 1;
   display: block;
   width: 100%;
-  height: 100%;
+  height: 24vh;
   transition: 0.5s ease;
   backface-visibility: hidden;
-  position: absolute;
-  top: 25px;
+  position: relative;
+  top: 0;
   left: 0;
+  bottom: 0;
 }
 
 .content:hover .image {
