--- a/src/App.scss
+++ b/src/App.scss
@@ -169,11 +169,25 @@ html {
   text-align: left;
 }
 
+@keyframes contactFadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
 .contactForm {
   width: 80%;
 
   form {
     transform: translateX(10%);
+  }
+
+  .form-group {
+    animation: contactFadeIn 1s;
   }
 }
 
@@ -194,13 +208,14 @@ html {
   .step {
     width: 80%;
     height: 100%;
-    padding: 6px 14px 5px 33px;
+    padding: 6px 14px 10px 33px;
     font-size: 18px;
     font-weight: 700;
     color: #797979;
     border-width: 0 0 1px 0;
     border-style: solid;
     border-color: #797979;
+    outline: none;
     background-color: $background-color;
     line-height: 100%;
   }
