--- a/src/App.scss
+++ b/src/App.scss
@@ -49,6 +49,15 @@ html {
   }
 }
 
+.page-wrapper {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: 0;
+  left: 0;
+  width: 100vw;
+}
+
 .left-nav-arrow {
   margin: auto 1.5em auto 0;
   left: 5px;
@@ -72,7 +81,7 @@ html {
 
 .profile-content {
   width: 100%;
-  margin: 10%;
+  margin: 10% 0;
   color: #fff;
   text-shadow: 1px 1px 0 #0b8be7 inset;
   text-align: center;
@@ -190,6 +199,7 @@ html {
 
 .contactForm {
   width: 80%;
+  margin: 25px auto;
 
   form {
     transform: translateX(10%);
@@ -246,6 +256,7 @@ html {
 
 .social {
   text-align: left;
+  margin: inherit auto;
 
   h4 {
     font-size: 1.4em;
