Adds explanation to each individual project.

--- a/src/Components/Portfolio/PortfolioWindow.scss
+++ b/src/Components/Portfolio/PortfolioWindow.scss
@@ -74,7 +74,7 @@ header {
 .tech-pill {
   opacity: 1;
   background-color: #313131;
-
+  color: #fff;
   border: solid 1px;
   border-color: #fff;
   padding: 5px;
